<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prefs_general">
        
        <ListPreference 
            android:key="def_units"
            android:title="@string/prefs_def_units"
            android:summary="@string/prefs_def_units_summary"
            android:entries="@array/units"
            android:defaultValue="Metrics"
            android:entryValues="@array/units"/>

        <CheckBoxPreference
            android:key="show_units"
            android:title="@string/prefs_show_units"
            android:summary="@string/prefs_show_units_summary"
            android:defaultValue="True" />
        
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_airports">
        <CheckBoxPreference
            android:key="remember_airports"
            android:disableDependentsState="true"
            android:title="@string/prefs_fill_last_airports"
            android:summary="@string/prefs_fill_last_airports_summary"
            android:defaultValue="True"/>
         <EditTextPreference
             android:key="default_origin"
             android:title="@string/prefs_default_orig_airport"
             android:summary="@string/prefs_default_orig_airport_summary"
             android:defaultValue="" />
         <EditTextPreference
             android:key="default_destination"
             android:title="@string/prefs_default_dest_airport"
             android:summary="@string/prefs_default_dest_airport_summary"
             android:defaultValue="" />
        <CheckBoxPreference 
             android:key="use_default_airports"
             android:title="@string/prefs_use_default_airports"
             android:dependency="remember_airports"
             android:summary="@string/prefs_use_default_airports_summary"
             android:defaultValue="False"/>
    </PreferenceCategory>

</PreferenceScreen>