<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_history"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_go_to_today"
        android:title="@string/history"/>
    <item
        android:id="@+id/menu_favourites"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_important"
        android:title="@string/favorites"/>
    
    <item
        android:id="@+id/menu_rate"
        android:orderInCategory="103"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_good"
        android:title="@string/menu_rate"/>
</menu>